# sdf-pressure-contact

./: .gitignore  AGENT.md  DIFF_ANALYSIS.md  LICENSE  README.md  native_band_voxel_fix_migration_guide.md
pfc_sdf_validation/: README.md  complex6dof_ablation.csv  complex6dof_ablation.tex  complex6dof_efficiency.csv  complex6dof_efficiency.tex  complex6dof_reference_comparison.csv  complex6dof_reference_comparison.tex  consistent_traction_comparison.csv  impulse_corrected_comparison.csv  long_horizon_ablation.csv  native_band_ablation_current.csv  paper_ablation_table.md  pfc_sdf_dynamics_paper_sprint1.aux  pfc_sdf_dynamics_paper_sprint1.out  pfc_sdf_dynamics_paper_sprint1.tex  pfc_sdf_dynamics_paper_sprint1.toc  pfc_sdf_dynamics_paper_sprint3_appendix.aux  pfc_sdf_dynamics_paper_sprint3_appendix.fdb_latexmk  pfc_sdf_dynamics_paper_sprint3_appendix.fls  pfc_sdf_dynamics_paper_sprint3_appendix.out  pfc_sdf_dynamics_paper_sprint3_appendix.tex  pfc_sdf_dynamics_paper_sprint3_appendix.toc  pfc_sdf_dynamics_paper_sprint3_appendix.xdv  pyproject.toml  work_consistent_comparison.csv
pfc_sdf_validation/configs/: appendix.yaml  efficiency.yaml  main_tables.yaml
pfc_sdf_validation/experiments/: run_appendix_tables.py  run_complex_case.py  run_complex_case_6dof.py  run_efficiency_tables.py  run_main_tables.py  run_plot_suite.py  run_sensitivity_tables.py
pfc_sdf_validation/paper/: Makefile  README.md  abstract.txt  latexmkrc  main.tex  main_anonymous.tex
pfc_sdf_validation/tests/: test_step_01_geometry.py  test_step_02_depth_pressure.py  (+57 more)
sdf_contact_src/: pyproject.toml
(+286 files in other folders)
