[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfc-sdf-validation"
version = "0.1.0"
description = "Minimal Python scaffold for validating a generic PFC-SDF workflow"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scikit-image>=0.22",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]
