[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdf-contact-minimal"
version = "0.1.0"
description = "Minimal repository for SDF-based mesh contact with a polygon high-accuracy local evaluator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "trimesh",
  "shapely",
  "scikit-image",
]

[project.optional-dependencies]
benchmarks = ["matplotlib", "pandas"]

[tool.setuptools.packages.find]
include = ["sdf_contact*"]
